--- a/Section 10/TF2.0 RNN Shapes.ipynb
+++ b/Section 10/TF2.0 RNN Shapes.ipynb
@@ -8,7 +8,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.3.1\n"
+      "2.0.1\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.18.5\n"
+      "1.19.5\n"
      ]
     }
    ],
@@ -100,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# Make some data\n",
-    "N = 3\n",
+    "N = 1\n",
     "T = 10\n",
     "D = 3\n",
     "K = 2\n",
@@ -119,7 +119,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0.38366184  0.01094198  1.47895739]\n",
+      "  [ 0.67794095 -0.13159957  0.90285573]\n",
+      "  [ 1.62457324  0.14661692  0.54412575]\n",
+      "  [-0.99039354  0.75640654 -1.10643689]\n",
+      "  [ 0.04077221  0.01235557  0.98824049]\n",
+      "  [-0.97973791  0.23021623  0.64429543]\n",
+      "  [ 2.02305551 -0.53803181 -0.15367733]\n",
+      "  [ 1.07045457 -0.81538872  0.30191102]\n",
+      "  [-0.71226991 -0.35243245  1.49462956]\n",
+      "  [-1.41499577 -0.22338629  1.55433856]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "# Make an RNN\n",
@@ -139,15 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.78490984 -0.30868205]\n",
-      " [-0.85483146  1.1177346 ]\n",
-      " [ 0.84584373  1.2946328 ]]\n"
+      "[[-0.726123  -0.6260365]]\n"
      ]
     }
    ],
@@ -165,13 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"functional_5\"\n",
+      "Model: \"model_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -200,13 +229,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
-      "text/plain": "[array([[-0.3041228 ,  0.14652735, -0.44635728, -0.38041073, -0.23696923],\n        [ 0.12936872,  0.6421047 ,  0.42220384,  0.39694065, -0.80862695],\n        [ 0.81851965,  0.62728566, -0.28555894,  0.57325965, -0.16135174]],\n       dtype=float32),\n array([[-0.16342914,  0.567871  ,  0.21201554,  0.27873752,  0.72675174],\n        [-0.4855685 , -0.75011915,  0.01169065,  0.23025516,  0.38521472],\n        [-0.3521136 ,  0.04743075,  0.16041875, -0.9024999 ,  0.18310122],\n        [-0.6888422 ,  0.24663594,  0.3463769 ,  0.2340455 , -0.5384356 ],\n        [ 0.3728625 , -0.22751871,  0.8995563 ,  0.00213601, -0.00162007]],\n       dtype=float32),\n array([0., 0., 0., 0., 0.], dtype=float32)]"
+      "text/plain": "[array([[-0.14862329,  0.72479063, -0.47879082, -0.5859579 ,  0.80050415],\n        [-0.38984877, -0.16076511,  0.7640466 ,  0.34628493, -0.23794585],\n        [-0.8213527 , -0.76283234, -0.6451081 , -0.43207404, -0.31746614]],\n       dtype=float32),\n array([[-0.07037139, -0.2172454 , -0.3694741 ,  0.8120384 , -0.389788  ],\n        [-0.43037954,  0.8119925 , -0.01127151, -0.01424125, -0.39384237],\n        [-0.06989142, -0.21958931,  0.8734252 ,  0.13755926, -0.40632713],\n        [ 0.52839124,  0.4880439 ,  0.27456495,  0.4947525 ,  0.40305078],\n        [ 0.72507864,  0.08406198, -0.15844387, -0.27692634, -0.6044848 ]],\n       dtype=float32),\n array([0., 0., 0., 0., 0.], dtype=float32)]"
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -252,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "Wx, Wh, bh = model.layers[1].get_weights()\n",
@@ -267,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.78490976 -0.30868203]\n"
+      "[-0.72612306 -0.62603655]\n"
      ]
     }
    ],
